# garsoft

./: CMakeLists.txt  README.md
Ana/: StructuredTree.fcl  StructuredTree_module.cc  anatree_module.cc
Ana/gntpc_dune/main/: gNtpConvDUNE.cxx
DetectorInfo/: CMakeLists.txt  DetectorPropertiesServiceStandardGArToad.h  DetectorPropertiesServiceStandardGArToad_service.cc  DetectorPropertiesStandardTestHelpersTOAD.h  DetectorPropertiesStandardToad.cxx  DetectorPropertiesStandardToad.h  DetectorProperties_toad.fcl
EventDisplay/: evd3D_toad.fcl  evdservices_base.fcl
EventDisplay/EVD3D/: CMakeLists.txt  EVD3DToad_module.cc
EventGenerator/: prodtext_toad.fcl  toadtfgen.fcl
EventGenerator/GENIE/: GENIEGen.fcl  prodgenie_toad.fcl
Filters/: FSPEventFilter_module.cc  Filters.fcl  run_filter.fcl
GArG4/: ConfigurablePhysicsList.icc  CustomPhysicsTable.cxx  CustomPhysicsTable.hh  EnergyDepositAction.fcl  GArG4.fcl  GArG4TOAD_module.cc  MaterialPropertyLoader_toad.cxx  MaterialPropertyLoader_toad.h  ParticleListAction.cxx  rungeant4.fcl
Geometry/: Geometry.fcl  GeometryCore.cxx  GeometryCore.h  StandardGeometryHelperGArToad.h  StandardGeometryHelperGArToad_service.cc
Geometry/ChannelMapAlgs/: ChannelMapStandardAlg_toad.cxx  ChannelMapStandardAlg_toad.h
Geometry/gdml/: FullDetector_80Layers_Baseline.gdml.REMOVED.git-id
MCCheater/: BackTrackerCore.cxx  BackTracker_service.cc
Prototypes/TOAD/RawDecoding/dunedaqhdf5utils2/: HDF5RawDataFile.cpp  HDF5RawDataFile.hpp  (+2 more)
RawDataProducts/: CaloRawDigit.h
ReadoutSimulation/: ElectronDriftStandardAlg_toad.cxx  ElectronDriftStandardAlg_toad.h  IonizationReadout.fcl  IonizationReadoutToad_module.cc  readoutsimjob_toad.fcl
Reco/: ALICEKalmanTrackFit.fcl  ALICEKalmanTrackFit_module.cc  CompressedHitFinder.fcl  CompressedHitFinderToad_module.cc  SiPMHitFinder.fcl  TPCECALAssociation.fcl  TPCECALAssociation_module.cc  recojob.fcl  recojob_toad.fcl  recojob_tpctrackfit2.fcl  tpccathodestitch_module.cc  veefinder1_module.cc  vertex1algs.cxx  vertexfinder1.fcl  vertexfinder1_module.cc
RecoAlg/: AliExternalTrackParam.cpp  AliExternalTrackParam.h  AliLog.cpp  AliLog.h  AliPDG.cpp  AliPDG.h  AliPID.cpp  AliPID.h  AliSysInfo.cpp  AliSysInfo.h  AliVParticle.cpp  AliVParticle.h  AliVTrack.cpp  AliVTrack.h  AliVVertex.cpp  AliVVertex.h  AliXRDPROOFtoolkit.cpp  AliXRDPROOFtoolkit.h  CMakeLists.txt  KNNClusterAlg.cxx  NNClusters.h  fastSimulation.cpp  fastSimulation.h  fastTracker.h  garutils.h
ReconstructionDataProducts/: CaloHit.h  Cluster.h  PFParticle.h  Track.cxx  Track.h  classes_def.xml
StandardRecord/: CMakeLists.txt  SRECalCluster.h  SRMuIDCluster.cxx  SRMuIDCluster.h  SRTrack.h
StandardRecord/Flat/: CMakeLists.txt  flatten_caf.cc
StandardRecord/Proxy/: CMakeLists.txt  Instantiations.cxx
TestUtils/: ProviderList.h
Utilities/Dumpers/: MCDumperUtils.cxx
Utilities/RootGraphics/: RootGraphicsEnabler.cxx
ups/: product_deps
